--- a/css/responsive demo/index.html
+++ b/css/responsive demo/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="CSS only mobile first navigation">
 	<meta name="author" content="Ian Yates">
 
-	<!--Mobile specific meta goodness :)-->
+	<!--Mobile specific meta goodness :) Ian Yates-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!--google fonts-->
@@ -66,6 +66,26 @@
 		</article>
 		
 		<nav id="primary_nav">
+		
+			<ul>
+			
+				<li><a href="">Portfolio</a></li>
+			
+				<li><a href="">About Me</a></li>
+			
+				<li><a href="">Nonsense</a></li>
+			
+				<li><a href="">Services</a></li>
+			
+				<li><a href="">Contact</a></li>
+			
+				<li class="top"><a href="#home">Top</a></li>
+			
+			</ul>
+		
+		</nav><!--end primary_nav-->
+        
+        		<nav id="primary_nav">
 		
 			<ul>
 			
